Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSGS7zzfRbw6+k+Gyegy2s",
+      "authorship_tag": "ABX9TyOp/8XNiNJ/CLgkIM5TM1R3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,7 @@
         "* https://elixirschool.com/ja/lessons/basics/control-structures/\n",
         "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.\n",
         "* https://dev.to/gumi/elixir-01--2585\n",
+        "* https://elixir-lang.org/getting-started/introduction.html\n",
         "\n",
         "---\n",
         "本を買った。\n",
@@ -76,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,13 +87,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9819de76-beb4-4311-cfea-daabbc218b11"
+        "outputId": "6c3e8334-68cc-422f-d89a-9cd378f3f7b7"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +102,7 @@
             "Erlang/OTP 24 [erts-12.2.1] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
             "\n",
             "Elixir 1.13.0 (compiled with Erlang/OTP 24)\n",
-            "Sat Mar  5 18:57:58 UTC 2022\n"
+            "Sat Mar  5 21:42:24 UTC 2022\n"
           ]
         }
       ]
@@ -117,7 +118,7 @@
         "\n",
         "`!elixir -h` (ヘルプ)としたらシェルワンライナー `elixir -e` が使えるらしいことがわかった。\n",
         "\n",
-        "`iex` というのがインタラクティブ環境なのだが、colab では使いにくいのでとりあえず使わない。"
+        "`iex` というのがインタラクティブ環境なのだが、colab では使いにくいので `elixir -e` で代用する。"
       ]
     },
     {
@@ -127,13 +128,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "107c42aa-d3f0-43fe-a15e-96eabf8b9bd3"
+        "outputId": "282c10a5-37ca-4746-d9e1-577df7d1211b"
       },
       "source": [
         "!elixir -e 'IO.puts 3 + 3'\n",
         "!elixir -e 'IO.puts \"hello world!\"'"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,20 +153,44 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYCKapxtdtco",
-        "outputId": "808e6f64-d577-43c8-fe1c-dc07ecf30afd"
+        "outputId": "da745095-20e3-4c15-a3e3-1cc0c49408af"
       },
       "source": [
         "# 次のようにすればファイルが作れる\n",
         "%%writefile temp.exs\n",
         "IO.puts \"this is a pen.\""
       ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cat してみる\n",
+        "!cat temp.exs"
+      ],
+      "metadata": {
+        "id": "N3_QSeBGCWS3",
+        "outputId": "c70f02ea-2fec-462a-d59a-9ffa201b64aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.exs\n"
+            "IO.puts \"this is a pen.\""
           ]
         }
       ]
@@ -177,10 +202,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "06mP6Jy_d505",
-        "outputId": "0719e750-76d4-46f4-fc5c-d8df179222ec"
+        "outputId": "8fe41fcd-a47e-4129-ccd3-d8c3338e544b"
       },
       "source": [
-        "# ファイルをelixirで実行する\n",
+        "# ファイルを elixir で実行する\n",
         "!elixir temp.exs"
       ],
       "execution_count": 7,
@@ -233,7 +258,7 @@
         "\n",
         "IO.inspect result"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +281,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +335,7 @@
         "  {:msg, contents} -> IO.puts contents\n",
         "end"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +358,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +416,7 @@
         "  end\n",
         "end"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +439,7 @@
       "source": [
         "!elixir --erl \"+P 1000000\" -r chain.exs  -e \"Chain.run(1_000_000)\""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +458,7 @@
       "source": [
         "記事 https://ubiteku.oinker.me/2015/12/22/elixir試飲-2-カルチャーショックに戸惑う-並行指向プ/ のマシン Macbook Pro – 3 GHz Intel Core i7, 16GB RAM では 7 秒のところ、colab では 5 秒で終わってるね!!!!\n",
         "\n",
-        "手元のwindowsマシン intel core i5-9400 8gb ram でやったら次のようになった。\n",
+        "手元のwindowsマシン intel core i5-9400 8gb ram でやったら次のようになった。  \n",
         "{3492935, \"Result is 1000000\"}\n",
         "\n",
         "あれ、速いじゃん!!!!"
@@ -464,7 +489,7 @@
         "str = \"helloworld!!!!\"\n",
         "IO.puts str"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +512,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,11 +634,12 @@
         "!elixir -e 'IO.puts 0xffff'\n",
         "!echo\n",
         "# Integer.to_string() と言う関数を使う\n",
+        "# <> はバイナリー連結\n",
         "!elixir -e 'IO.puts \"0b\" <> Integer.to_string(15,2)'\n",
         "!elixir -e 'IO.puts \"0o\" <> Integer.to_string(4095,8)'\n",
         "!elixir -e 'IO.puts \"0x\" <> Integer.to_string(65535,16)'"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +681,7 @@
         "!elixir -e 'IO.puts 0.00000000000000000000000001' #=> 1.0e-26\n",
         "!elixir -e 'IO.puts 90000000000000000000000000000000000000000000000000000000'"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
