--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3IBAjFCpAUu9d23jxbNOM",
+      "authorship_tag": "ABX9TyOy04cmbXQmhvbRUwXA88Mb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -87,13 +87,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c3e8334-68cc-422f-d89a-9cd378f3f7b7"
+        "outputId": "40af8737-a175-48a8-9b65-fc8b53e13605"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
             "Erlang/OTP 24 [erts-12.2.1] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
             "\n",
             "Elixir 1.13.0 (compiled with Erlang/OTP 24)\n",
-            "Sat Mar  5 21:42:24 UTC 2022\n"
+            "Sun Mar  6 18:51:40 UTC 2022\n"
           ]
         }
       ]
@@ -921,7 +921,7 @@
         "!elixir -e 'a =1; IO.puts 1 = a'\n",
         "!elixir -e 'a =1; IO.puts 2 = a'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,10 +948,10 @@
         "outputId": "1c4ade23-749b-4945-fc10-e520d535bd4c"
       },
       "source": [
-        "!elixir -e 'IO.inspect a = [1,2,3]' # リストは puts で表示できないので\n",
+        "!elixir -e 'IO.inspect a = [1,2,3]' # リストは puts で表示できないので inspect を使う\n",
         "!elixir -e '[a,b,c] = [1,2,3]; IO.puts c; IO.puts b'\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1084,15 +1084,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "Z_ah9bgWJP9a"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1102,7 +1093,7 @@
         "outputId": "d7099ec0-513d-4a5f-b536-61476a57580a"
       },
       "source": [
-        "# 実験\n",
+        "# 実験 アトムについては後述\n",
         "!elixir -e 'IO.puts a = :a'\n",
         "!elixir -e 'a = :a; IO.inspect a = a'\n",
         "!elixir -e 'a = :a; IO.puts a = a'\n",
@@ -1334,6 +1325,30 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# 実験 アトムは宣言しないで突然使える\n",
+        "!elixir -e 'IO.puts :fred'"
+      ],
+      "metadata": {
+        "id": "_VXZlUyTmEOC",
+        "outputId": "4b9582df-e2e5-4e13-84da-b8151a0d3b73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fred\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "I4OyDEuL5NXn",
         "colab": {
@@ -1370,13 +1385,17 @@
         "outputId": "2e26bf3d-7bd9-45bb-f41e-0de535e3010f"
       },
       "source": [
-        "# 実験 多分 colab の環境のせいで引用符が処理できない。2 バイト文字はオッケー。\n",
+        "# 実験 \n",
         "!elixir -e 'IO.puts :fred'\n",
         "!elixir -e 'IO.puts :is_binary?'\n",
         "!elixir -e 'IO.puts :var@2'\n",
         "!elixir -e 'IO.puts :<>'\n",
         "!elixir -e 'IO.puts :==='\n",
-        "# !elixir -e 'IO.puts :\"func/3\"​'\n",
+        "# セミコロンを含むアトムは iex 上では使えるが、シェルワンライナーでは使えない  \n",
+        "# unexpected token: \"​\" と言うエラーになる\n",
+        "# colab の環境だけでなく、通常のシェルでも同じ\n",
+        "# ファイルにしたプログラムでは使えるので問題ない\n",
+        "# !elixir -e 'IO.puts :\"func/3\"​' \n",
         "# !elixir -e 'IO.puts ​​:\"long john silver\"'\n",
         "!elixir -e 'IO.puts :эликсир'\n",
         "!elixir -e 'IO.puts :mötley_crüe'\n",
@@ -1488,30 +1507,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MD79UYp8WYW5",
-        "outputId": "2d542d04-fd31-4535-8ae0-533f438f6b9f"
+        "outputId": "4c1279d8-57d6-42f9-87e4-72a93a972a0b"
       },
       "source": [
         "# 比較演算子\n",
         "!elixir -e 'IO.puts 1 == 1'\n",
         "!elixir -e 'IO.puts 1 != 1'\n",
         "!elixir -e 'IO.puts ! (1 != 1)'\n",
+        "!echo\n",
         "!elixir -e 'IO.puts 20.0 == 20'\n",
         "!elixir -e 'IO.puts 20.0 === 20'\n",
         "!elixir -e 'IO.puts 20.0 !== 20'"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "true\n",
             "false\n",
             "true\n",
+            "\n",
             "true\n",
             "false\n",
             "true\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -1578,7 +1599,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74feafda-254e-4218-ae3f-4a64da88d9d1"
+        "outputId": "7ebe413a-40dc-4e36-b4c2-616c4ab50bd1"
       },
       "source": [
         "!elixir -e 'IO.inspect Enum.to_list(1..3)'\n",
@@ -1586,23 +1607,27 @@
         "!elixir -e 'IO.inspect Enum.to_list(0..10//-3)'\n",
         "!elixir -e 'IO.inspect Enum.to_list(10..0//-3)'\n",
         "!elixir -e 'IO.inspect Enum.to_list(1..1)'\n",
+        "!elixir -e 'IO.inspect Enum.to_list(1..-1)'\n",
         "!elixir -e 'IO.inspect Enum.to_list(1..1//2)'\n",
-        "!elixir -e 'IO.inspect Enum.to_list(1..-1//2)'"
+        "!elixir -e 'IO.inspect Enum.to_list(1..-1//2)'\n",
+        "!elixir -e 'IO.inspect Enum.to_list(1..-1//-2)'"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[1, 2, 3]\n",
             "[0, 3, 6, 9]\n",
             "[]\n",
             "[10, 7, 4, 1]\n",
             "[1]\n",
+            "[1, 0, -1]\n",
             "[1]\n",
-            "[]\n"
-          ],
-          "name": "stdout"
+            "[]\n",
+            "[1, -1]\n"
+          ]
         }
       ]
     },
@@ -1613,21 +1638,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "156a8bc2-8ca5-497a-9e99-42aba120eb9b"
+        "outputId": "7ec94c99-0907-4828-a5d0-642e6c361d7a"
       },
       "source": [
         "!elixir -e 'IO.inspect 1..9//2'"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1..9//2\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "n-4SCooauOSd"
+      }
     },
     {
       "cell_type": "markdown",
