Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNzT3CWfIbM2AOwc6K+b2qu",
+      "authorship_tag": "ABX9TyOWTdaZAzdMOKXADsDyiWTj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1782,7 +1782,9 @@
         "\n",
         "タプルは関数の返り値に便利に利用される。\n",
         "\n",
-        "パターンマッチングと組み合わせて使われる。\n"
+        "パターンマッチングと組み合わせて使われる。\n",
+        "\n",
+        "質問: 波括弧 brace は値の代入`#{変数名}` と正規表現 Regex `r{}' で使っているのでタプルでしか使えないような表現は間違っていないか。それとも、変数や正規表現はタプルの1種なのか。\n"
       ]
     },
     {
@@ -1878,7 +1880,7 @@
         "outputId": "ec0998a9-c794-481b-975c-1ca36c07c1ac"
       },
       "source": [
-        "# 実験 タプルに ++ は使えるか。 => 使えない\n",
+        "# 実験 タプルに ++ は使えるか。 => 使えない <> も使えない\n",
         "# !elixir -e 'IO.inspect {3.14, :pie, \"Apple\"} ++ {3}'\n",
         "# 実験 タプルに head は使えるか。 => 使えない\n",
         "# !elixir -e 'IO.inspect hd {3.14, :pie, \"Apple\"}'\n",
@@ -1903,20 +1905,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yA9cADK87DCa",
-        "outputId": "a8d2389d-acb5-49da-fca2-9c08dc61b5df"
+        "outputId": "3dcc7a18-edbd-4327-bd0b-024f70755779"
       },
       "source": [
         "# 実験\n",
         "!elixir -e 'a=1; b=3; {b,a}={a,b}; IO.inspect {a,b}'"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{3, 1}\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
