Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMX0A0Dp4ZD8+12KXDxx1SJ",
+      "authorship_tag": "ABX9TyPqoGxg6Ueboc2nF79RGaPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1851,7 +1851,7 @@
         "!elixir -e '{status, file} = File.write(\"temp.txt\", \"goodbye\"); IO.inspect {status, file}'\n",
         "!elixir -e '{status, file} = File.read(\"temp.txt\"); IO.inspect {status, file}'\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1871,7 +1871,7 @@
         "# 実験 タプルにパターンマッチングは使えるか。 => 使える\n",
         "!elixir -e '{a,b,c} =  {3.14, :pie, \"Apple\"}; IO.inspect [c,a,b]'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1897,7 +1897,7 @@
         "!elixir -e 'a=1; b=3; {b,a}={a,b}; IO.inspect {a,b}'\n",
         "!elixir -e 'a=1; b=3; c=5; d= 7; {d,c,b,a}={a,b,c,d}; IO.inspect {a,b,c,d}'"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1923,7 +1923,7 @@
         "id": "za1VGkVyqVLQ",
         "outputId": "108f931f-b479-40b3-c96b-9509f161e48a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1944,7 +1944,7 @@
         "\n",
         "他の言語の配列 array と elixir のリストは違うので注意。 lisp のリストと似たような概念である。\n",
         "\n",
-        "カラのリストでなければ、head と tail がある。\n"
+        "カラのリストでなければ、head (hd) と tail (tl) がある。hd は頭の1つで tl はそれ以降全部。"
       ]
     },
     {
@@ -2038,7 +2038,7 @@
         "# リストの連結\n",
         "!elixir -e 'IO.inspect  [1, 2] ++ [3, 4, 1]'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2068,7 +2068,7 @@
         "!elixir -e 'IO.inspect  [2] -- [2.0]'\n",
         "!elixir -e 'IO.inspect  [2.0] -- [2.0]'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2243,7 +2243,7 @@
         "!elixir -e 'IO.inspect {1, fred: 1, dave: 2}'\n",
         "!elixir -e 'IO.inspect {1, [{:fred,1},{:dave, 2}]}'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2288,7 +2288,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a15c3fdc-37c4-41f4-8278-e98d431841ea"
+        "outputId": "ea14ae19-5e87-4fd9-8eb3-9a66d1b3570b"
       },
       "source": [
         "!elixir -e 'IO.inspect %{:foo => \"bar\", \"hello\" => :world}'\n",
@@ -2296,21 +2296,26 @@
         "!elixir -e 'map = %{:foo => \"bar\", \"hello\" => :world}; IO.inspect map[\"hello\"]'\n",
         "!echo\n",
         "!elixir -e 'key = \"hello\"; IO.inspect %{key => \"world\"}'\n",
+        "!echo\n",
         "!elixir -e 'IO.inspect %{:foo => \"bar\", :foo => \"hello world\"}'"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "%{:foo => \"bar\", \"hello\" => :world}\n",
             "\"bar\"\n",
             ":world\n",
             "\n",
             "%{\"hello\" => \"world\"}\n",
+            "\n",
+            "\u001b[33mwarning: \u001b[0mkey :foo will be overridden in map\n",
+            "  nofile:1\n",
+            "\n",
             "%{foo: \"hello world\"}\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -2320,7 +2325,7 @@
         "id": "dkcO672-FkQc"
       },
       "source": [
-        "上下の例にあるように、アトムのキーだけを含んだマップには特別な構文がある。"
+        "アトムのキーだけを含んだマップには特別な構文がある。"
       ]
     },
     {
