Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqoGxg6Ueboc2nF79RGaPs",
+      "authorship_tag": "ABX9TyP6RdX7IWS6WXMLUgP280kN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2258,15 +2258,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "n-4SCooauOSd"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "FTteo69skgsD"
       },
@@ -2358,22 +2349,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0b112a23-0366-4eaf-89f1-c7401d6fe9dc"
+        "outputId": "d00808fc-9981-4cb7-ff67-eb9d77257ff0"
       },
       "source": [
         "# 加えて、アトムのキーにアクセスするための特別な構文がある。\n",
-        "!elixir -e 'map = %{foo: \"bar\", hello: \"world\"}; IO.inspect map.hello'"
+        "!elixir -e 'map = %{foo: \"bar\", hello: \"world\"}; IO.inspect map.hello'\n",
+        "!elixir -e 'map = %{foo: \"bar\", hello: \"world\"}; IO.inspect map[:hello]'\n",
+        "!elixir -e 'map = %{:foo => \"bar\", :hello =>  \"world\"}; IO.inspect map[:hello]'"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "\"world\"\n",
+            "\"world\"\n",
             "\"world\"\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "質問 map の特別な構文\n",
+        "\n",
+        "1. `=>` の代わりにコロン `:` を使う\n",
+        "2. 要素を取り出すのに `[]` の代わりにピリオド `.` を使う\n",
+        "\n",
+        "は不要ではないか。不要だが見かけが良くなる、ということか。普通はどっちを使うのか。無駄に構文を複雑にするだけのような気がする。\n",
+        "\n",
+        "多分まず Python の dict でコロン `:` を使うこと、Ruby は `=>` を使うが糖衣構文としてコロン `:` が使えてその形が主流であることから、見かけ大切ということでこうなったのではないか。キーにアトムを使うことが前提ならば生産性が上がるかもしれない。キーであることを示すコロンが不要になる。fat arrow よりコロンの方が短い。map の定義が同時に行われる。要素の取り出しピリオドを使う点についても同様。ということは基本的にこの構文になる、と言う事だろう。"
+      ],
+      "metadata": {
+        "id": "c_vdluG2lvZF"
+      }
     },
     {
       "cell_type": "code",
