Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPIy1bBTLlX/n68cTsNF4hd",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMXkZ1slgtjAAwSbb0mQ+4m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2570,15 +2571,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tGElsY_iwSYK"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "g-s-BTlMuwSl"
       },
@@ -2653,25 +2645,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "93KRea97Ontw"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "v2CvxtY_rag8"
       },
       "source": [
-        "# enum モジュール\n",
+        "# Enum モジュール\n",
         "\n",
-        "enum はリストなどコレクションを列挙するための一連のアルゴリズム。\n",
+        "Enum はリストなどコレクションを列挙するための一連のアルゴリズム。\n",
         "\n",
         "* all?、any?\n",
         "* chunk_every、chunk_by、map_every\n",
@@ -2813,6 +2794,15 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "yB82BlB5L-a3"
+      }
     },
     {
       "cell_type": "code",
@@ -3047,9 +3037,9 @@
         "id": "e5qxCiaH6Bps"
       },
       "source": [
-        "# キャプチャ演算子 `&` を使用した enum と無名関数 \n",
+        "# キャプチャ演算子 `&` を使用した Enum と無名関数 \n",
         "\n",
-        "elixir の enum モジュール内の多くの関数は、引数として無名関数を取る。\n",
+        "elixir の Enum モジュール内の多くの関数は、引数として無名関数を取る。\n",
         "\n",
         "これらの無名関数は、多くの場合、キャプチャ演算子 `&` を使用して省略形で記述される。\n",
         "\n"
