--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnytAhDbKcUNQCbyV8zj1q",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMtoAfGYambmAW8j8z9R4g/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2955,22 +2956,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "8DrF7rNHF1Rb"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KcZHo75X0t94",
-        "outputId": "0ee9b8ff-7a2c-4311-c09c-f86f7e6b972e"
+        "outputId": "64c51728-1c25-4b30-ca3f-ad62d9915c18"
       },
       "source": [
         "# sort `sort/1` はソートの順序に Erlangの Term 優先順位 を使う\n",
@@ -2986,18 +2978,18 @@
         "# sort/2 に :asc または :desc をソート関数として渡すことができる\n",
         "!elixir -e 'IO.inspect Enum.sort([2, 3, 1], :desc)'\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[-1, 1, 3, 4, 5, 6]\n",
             "[-1, 4, Enum, :foo, \"bar\"]\n",
             "[%{val: 4}, %{val: 1}]\n",
             "[%{count: 1}, %{count: 4}]\n",
             "[3, 2, 1]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -3029,6 +3021,15 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "6GZGz3zPcZPr"
+      }
     },
     {
       "cell_type": "markdown",
