Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNlBYgUZlZg8OWeX5+d4X82",
+      "authorship_tag": "ABX9TyOIkhpM6MKawU5wFwain8L3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -901,7 +901,8 @@
         "id": "C9JDfWYm_mDC"
       },
       "source": [
-        "# マッチ演算子 `=`\n",
+        "---\n",
+        "**マッチ演算子 `=`**\n",
         "\n",
         "マッチ演算子 `=` はマッチ演算子である。 マッチ演算子を通して値を代入し、その後、マッチさせることができる。マッチすると、方程式の結果が返され、失敗すると、エラーになる。"
       ]
@@ -2504,7 +2505,8 @@
         "id": "bwvkel2v_0ee"
       },
       "source": [
-        "# Date and Time 日付"
+        "----\n",
+        "** Date and Time 日付 **"
       ]
     },
     {
@@ -3163,38 +3165,28 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "6GZGz3zPcZPr"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FAI9EHeUGviK",
-        "outputId": "7ad435a4-9c8d-40c0-afc6-a4c099994135"
+        "outputId": "464b317d-3674-459d-e725-4c0a20da4793"
       },
       "source": [
         "# タプルとマッチ演算子\n",
         "!elixir -e 'IO.inspect {:ok, value} = {:ok, \"Successful!\"}'\n",
         "!elixir -e '{:ok, value} = {:ok, \"Successful!\"}; IO.inspect  value'"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{:ok, \"Successful!\"}\n",
-            "\"Successful!\"\n",
-            ":ok\n"
-          ],
-          "name": "stdout"
+            "\"Successful!\"\n"
+          ]
         }
       ]
     },
@@ -3220,7 +3212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LwiOOT1LIEwW",
-        "outputId": "3f137a15-8287-40d4-e1bf-228179a8cabf"
+        "outputId": "c3d1b47a-2c84-4e3b-c65c-311f81d79efc"
       },
       "source": [
         "# ピン演算子\n",
@@ -3232,13 +3224,14 @@
         "!echo\n",
         "!elixir -e 'IO.inspect key = \"hello\"'\n",
         "!elixir -e 'key = \"hello\"; IO.inspect %{^key => value} = %{\"hello\" => \"world\"}'\n",
-        "!elixir -e 'key = \"hello\"; IO.inspect %{^key => value} = %{\"hello\" => \"world\"}'\n",
+        "!elixir -e 'key = \"hello\"; %{^key => value} = %{\"hello\" => \"world\"}; IO.inspect value'\n",
         "!elixir -e 'key = \"hello\"; %{^key => value} = %{\"hello\" => \"world\"}; IO.inspect value'"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1\n",
             "{2, 1}\n",
@@ -3246,12 +3239,20 @@
             "\n",
             "\"hello\"\n",
             "%{\"hello\" => \"world\"}\n",
-            "%{\"hello\" => \"world\"}\n",
+            "\"world\"\n",
             "\"world\"\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "6GZGz3zPcZPr"
+      }
     },
     {
       "cell_type": "code",
