Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOIkhpM6MKawU5wFwain8L3",
+      "authorship_tag": "ABX9TyPOe6TKRwXMvaoplrS9JXIy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3178,7 +3178,7 @@
         "!elixir -e 'IO.inspect {:ok, value} = {:ok, \"Successful!\"}'\n",
         "!elixir -e '{:ok, value} = {:ok, \"Successful!\"}; IO.inspect  value'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3227,7 +3227,7 @@
         "!elixir -e 'key = \"hello\"; %{^key => value} = %{\"hello\" => \"world\"}; IO.inspect value'\n",
         "!elixir -e 'key = \"hello\"; %{^key => value} = %{\"hello\" => \"world\"}; IO.inspect value'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3246,51 +3246,33 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "6GZGz3zPcZPr"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GwNu1JTePo1J",
-        "outputId": "f11ec9e7-ec51-4c11-b5a2-f2bad5669449"
+        "outputId": "0f8d0fe6-f415-4351-8f49-8703abee874a"
       },
       "source": [
         "# 関数の clause でのピン演算子\n",
         "!elixir -e 'IO.inspect greeting = \"Hello\"'\n",
-        "!elixir -e 'greeting = \"Hello\"; IO.inspect greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"${greeting},${name}\" end'\n",
+        "!elixir -e 'greeting = \"Hello\"; IO.inspect greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end'\n",
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Hello\",\"Sean\")'\n",
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Mornin\",\"Sean\")'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\"Hello\"\n",
-            "#Function<12.99386804/2 in :erl_eval.expr/5>\n",
+            "#Function<43.65746770/2 in :erl_eval.expr/5>\n",
             "\"Hi Sean\"\n",
             "\"Mornin,Sean\"\n"
-          ],
-          "name": "stdout"
+          ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "F0vzrD-YSRiO"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -3327,23 +3309,118 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z43eR8Muc03m"
+        "id": "Z43eR8Muc03m",
+        "outputId": "442fc091-3c4d-4dd1-ff79-f1bad55f75d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "iex> if String.valid?(\"Hello\") do\n",
-        "...>   \"Valid string!\"\n",
-        "...> else\n",
-        "...>   \"Invalid string.\"\n",
-        "...> end\n",
-        "\"Valid string!\"\n",
-        "\n",
-        "iex> if \"a string value\" do\n",
-        "...>   \"Truthy\"\n",
-        "...> end\n",
-        "\"Truthy\"\n",
-        "unless/2 は if/2 のように使いますが、条件が否定される時だけ作用します:\n",
-        "\n",
-        "Copy\n",
+        "%%writefile temp.exs\n",
+        "IO.puts (\n",
+        "    if String.valid?(\"Hello\") do\n",
+        "        \"Valid string!\"\n",
+        "    else\n",
+        "        \"Invalid string.\"\n",
+        "    end)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "yBvYo7dOfTRL",
+        "outputId": "66ff6113-f938-4496-f97d-ec2651ab3799",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valid string!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.exs\n",
+        "if \"a string value\" do\n",
+        "  IO.puts \"Truthy\"\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "orOuUBAHerSw",
+        "outputId": "2396f2b0-bade-44ae-ad43-1761e898278f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "uSiaeBxPgJ8I",
+        "outputId": "ce0c7439-10f6-4e37-f24a-0659a0c9132a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Truthy\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "qBla6XGpgkTr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# unless/2 は if/2 の逆で、条件が否定される時だけ作用する\n",
+        "%%writefile temp.exs\n",
         "iex> unless is_integer(\"hello\") do\n",
         "...>   \"Not an Int\"\n",
         "...> end\n",
@@ -3499,6 +3576,9 @@
         "\n",
         "Toggle"
       ],
+      "metadata": {
+        "id": "5ir5OTregAuR"
+      },
       "execution_count": null,
       "outputs": []
     }
