Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPOe6TKRwXMvaoplrS9JXIy",
+      "authorship_tag": "ABX9TyN+W82UkmbtHYD0FNlera0A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3261,7 +3261,7 @@
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Hello\",\"Sean\")'\n",
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Mornin\",\"Sean\")'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3324,7 +3324,7 @@
         "        \"Invalid string.\"\n",
         "    end)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3347,7 +3347,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3373,7 +3373,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3396,7 +3396,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3408,36 +3408,137 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# unless/2 は if/2 の逆で、条件が否定される時だけ作用する\n",
+        "%%writefile temp.exs\n",
+        "unless is_integer(\"hello\") do\n",
+        "  IO.puts \"Not an Int\"\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "5ir5OTregAuR",
+        "outputId": "2fdd4e28-968e-4728-d91f-533ca6bcfd28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "G5CXvQ_IKfa-",
+        "outputId": "aa7ebe44-c510-419d-a9b1-147acdadcce8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not an Int\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 シェルワンライナー版 do や end の前後にセミコロンは要らない\n",
+        "!elixir -e 'unless is_integer(\"hello\") do IO.puts \"Not an Int\" end'"
+      ],
+      "metadata": {
+        "id": "kij-SM3GKofM",
+        "outputId": "d76e3a96-a3f3-455b-b748-55dfd14c7479",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not an Int\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 複数のパターンにマッチする場合、case/2 を使う\n",
+        "%%writefile temp.exs\n",
+        "IO.puts(\n",
+        "    case {:error, \"Hello World\"} do\n",
+        "        {:ok, result} -> result\n",
+        "        {:error, _} -> \"Uh oh!\"\n",
+        "        _ -> \"Catch all\"\n",
+        "    end   \n",
+        ")"
+      ],
+      "metadata": {
+        "id": "BRwwkAlTKCUi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "p3QNHz3iMTRC",
+        "outputId": "9feb815d-e744-4ce2-d296-d46f22e24e38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Uh oh!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
       ],
       "metadata": {
-        "id": "qBla6XGpgkTr"
+        "id": "du7_ERmLNAEj"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# unless/2 は if/2 の逆で、条件が否定される時だけ作用する\n",
-        "%%writefile temp.exs\n",
-        "iex> unless is_integer(\"hello\") do\n",
-        "...>   \"Not an Int\"\n",
-        "...> end\n",
-        "\"Not an Int\"\n",
-        "case \n",
-        "複数のパターンに対してマッチする必要があるなら、 case/2 を使うことができます:\n",
+        "# アンダースコア _ 変数は case/2 命令文の中に含まれる重要な要素\n",
+        "# これが無いと、マッチするものが見あたらない場合にエラーが発生する\n",
         "\n",
-        "Copy\n",
-        "iex> case {:ok, \"Hello World\"} do\n",
-        "...>   {:ok, result} -> result\n",
-        "...>   {:error} -> \"Uh oh!\"\n",
-        "...>   _ -> \"Catch all\"\n",
-        "...> end\n",
-        "\"Hello World\"\n",
-        "_ 変数は case/2 命令文の中に含まれる重要な要素です。これが無いと、マッチするものが見あたらない場合にエラーが発生します:\n",
         "\n",
-        "Copy\n",
         "iex> case :even do\n",
         "...>   :odd -> \"Odd\"\n",
         "...> end\n",
@@ -3577,7 +3678,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "5ir5OTregAuR"
+        "id": "ZvrCgzn8MDrG"
       },
       "execution_count": null,
       "outputs": []
