Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+W82UkmbtHYD0FNlera0A",
+      "authorship_tag": "ABX9TyPKN2NVogJ51GXM2zA5OzZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3423,7 +3423,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3446,7 +3446,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3470,7 +3470,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3512,7 +3512,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3537,23 +3537,62 @@
       "source": [
         "# アンダースコア _ 変数は case/2 命令文の中に含まれる重要な要素\n",
         "# これが無いと、マッチするものが見あたらない場合にエラーが発生する\n",
+        "# エラーの例\n",
+        "!elixir -e 'case :even do :odd -> IO.puts \"Odd\" end'"
+      ],
+      "metadata": {
+        "id": "ZvrCgzn8MDrG",
+        "outputId": "1153055b-64c1-4894-bc9f-cb11f4841628",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "** (CaseClauseError) no case clause matching: :even\n",
+            "    (stdlib 3.17) erl_eval.erl:973: :erl_eval.case_clauses/6\n",
+            "    (elixir 1.13.0) lib/code.ex:404: Code.validated_eval_string/3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# アンダースコア _ を\"他の全て\"にマッチする else と考える\n",
+        "!elixir -e 'case :even do :odd -> IO.puts \"Odd\"; _ -> IO.puts \"Not odd\" end'"
+      ],
+      "metadata": {
+        "id": "qmOrY5WcqHmS",
+        "outputId": "ae5234a6-8d8e-4bc1-da53-1790069fa0ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not Odd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# case/2 はパターンマッチングに依存しているため、パターンマッチングと同じルールや制限が全て適用される\n",
+        "# 既存の変数に対してマッチさせようという場合にはピン ^ 演算子を使う\n",
+        "!elixir -e 'pie=3.14; cas'\n",
         "\n",
         "\n",
-        "iex> case :even do\n",
-        "...>   :odd -> \"Odd\"\n",
-        "...> end\n",
-        "** (CaseClauseError) no case clause matching: :even\n",
         "\n",
-        "iex> case :even do\n",
-        "...>   :odd -> \"Odd\"\n",
-        "...>   _ -> \"Not Odd\"\n",
-        "...> end\n",
-        "\"Not Odd\"\n",
-        "_ を”他の全て”にマッチする else と考えましょう。\n",
-        "\n",
-        "case/2 はパターンマッチングに依存しているため、パターンマッチングと同じルールや制限が全て適用されます。既存の変数に対してマッチさせようという場合にはピン ^ 演算子を使わなくてはいけません:\n",
-        "\n",
-        "Copy\n",
         "iex> pie = 3.14\n",
         "3.14\n",
         "iex> case \"cherry pie\" do\n",
@@ -3678,7 +3717,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "ZvrCgzn8MDrG"
+        "id": "VvixstfspdMg"
       },
       "execution_count": null,
       "outputs": []
